--- a/login.html
+++ b/login.html
@@ -1,22 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login teste</title>
-    <!--<link rel="stylesheet" href="style.css"> -->
-</head>
-<body>
+    <link rel="stylesheet" href="login.css" />
+  </head>
+  <body>
     <div class="login">
-        <h2>Login </h2>
-        <form id="loginForm">
-            <input type="text" id="usuario" placeholder="Usuario" required><br>
-            <input type="password" id="senha" placeholder="Senha" required><br>
-            <button type="submit">Entrar</button>
-        </form>
-        <div id="mensagem"></div>
+      <h2>Login</h2>
+      <form id="loginForm">
+        <input type="text" id="usuario" placeholder="Usuario" required /><br />
+        <input type="password" id="senha" placeholder="Senha" required /><br />
+        <button type="submit">Entrar</button>
+        <p>Não tem uma conta?</p>
+        <a href="register.html">
+          <button type="button">Cadastre-se</button>
+        </a>
+      </form>
+      <div id="mensagem"></div>
     </div>
     <script src="script.js"></script>
     <script src="fetch.js"></script>
-</body>
+  </body>
 </html>
