--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login teste</title>
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="Css/login.css" />
   </head>
   <body>
     <div class="login">
@@ -13,14 +13,15 @@
         <input type="text" id="usuario" placeholder="Usuario" required /><br />
         <input type="password" id="senha" placeholder="Senha" required /><br />
         <button type="submit">Entrar</button>
-        <p>Não tem uma conta?</p>
-        <a href="register.html">
-          <button type="button">Cadastre-se</button>
-        </a>
       </form>
+      
+      <p>Não tem uma conta?</p>
+      <a href="register.html">
+        <button type="button">Cadastre-se</button>
+      </a>
+      
       <div id="mensagem"></div>
     </div>
-    <script src="script.js"></script>
-    <script src="fetch.js"></script>
+    <script src="Js/login.js"></script>
   </body>
 </html>
