--- a/public/index.html
+++ b/public/index.html
@@ -3,25 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login teste</title>
-    <link rel="stylesheet" href="Css/login.css" />
+    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="register.css" />
+
+    <title>Aniverfy</title>
+
   </head>
   <body>
-    <div class="login">
-      <h2>Login</h2>
-      <form id="loginForm">
-        <input type="text" id="usuario" placeholder="Usuario" required /><br />
-        <input type="password" id="senha" placeholder="Senha" required /><br />
-        <button type="submit">Entrar</button>
-      </form>
-      
-      <p>Não tem uma conta?</p>
-      <a href="register.html">
-        <button type="button">Cadastre-se</button>
-      </a>
-      
-      <div id="mensagem"></div>
-    </div>
-    <script src="Js/login.js"></script>
+
+    <main id="root">
+
+    </main>
+
+    <script type="module" src="./main.js"></script>
+
   </body>
 </html>
