--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="images/favicon.ico.png">
-    <link rel="stylesheet" href="login.css" />
-    <link rel="stylesheet" href="register.css" />
+    <link rel="stylesheet" href="/public/Templates/login.css" />
+    <link rel="stylesheet" href="/public/Templates/register.css" />
+    <link rel="stylesheet" href="/public/Templates/termsofuse.css" />
+    <link rel="stylesheet" href="/public/js/utils/modal.css">
 
     <title>Aniverfy</title>
 
