--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 
     </main>
 
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="/public/js/main.js"></script>
 
   </body>
   
